Corrected the name and added the phone number to CV.

--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
 <title>Curriculum Vitae of Victoria CEBAN</title>
 </head>
 <body>
-<h1>Victoria CEBANN</h1>
+<h1>Victoria CEBAN</h1>
 <p>Email: victoriaceban9@gmail.com</p>
+<div>Telefon: 069854712</div>
 </body>
 </html>
