--- a/public/index.html
+++ b/public/index.html
@@ -1,6 +1,9 @@
 <!DOCTYPE html>
 <html lang="en">
-	<link rel="stylesheet" href="/home/victoria/myCVInHtml/public/style.css">
+	<!-- <link rel="stylesheet" href="/home/victoria/myCVInHtml/public/style.css"> -->
+	<link rel="stylesheet" href="/home/victoria/myCVInHtml/public/bootstrap.css">
+
+
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 	<head>
 		<title>
@@ -8,64 +11,55 @@
 		</title>
 	</head>
 	<body>
-		<section id="about"> 
-		<div class="photo">
-			<a href="https://scontent.fkiv1-1.fna.fbcdn.net/v/t1.6435-9/179171818_3983463241712703_2852310172738425469_n.jpg?_nc_cat=106&ccb=1-3&_nc_sid=09cbfe&_nc_ohc=mMnyGbXKL9wAX9ttOTm&_nc_ht=scontent.fkiv1-1.fna&oh=c8bba77195d17390dd9051e52d8c6e95&oe=60E602F9">
-				<div class="avatar">
-					
+		<div class="section my-2 bg-light border-top border-warning"> 
+			<div class="row">
+				<div class="col">
+					<div class="col-sm-6 col-md-6 col-lg-4 float-end rounded-circle">
+						<img src="https://scontent.fkiv1-1.fna.fbcdn.net/v/t1.6435-9/179171818_3983463241712703_2852310172738425469_n.jpg?_nc_cat=106&ccb=1-3&_nc_sid=09cbfe&_nc_ohc=mMnyGbXKL9wAX9ttOTm&_nc_ht=scontent.fkiv1-1.fna&oh=c8bba77195d17390dd9051e52d8c6e95&oe=60E602F9" class="img-thumbnail rounded-circle">
+					</div>
+
 				</div>
-			</a>
-		
-		</div>
-		<div class="name">
-			<h1>CEBAN VICTORIA</h1>
-			<h3>FRONT END DEVELOPER</h3>
-		</div>
-		<div class="contacts">
-			<div class="social-links">
-				 <a class="fa fa-facebook" href="https://www.facebook.com/vica1995/" target="_blank"></a> 
-				 <a class="fa fa-linkedin" href="https://www.linkedin.com/in/victoria-c-377a181bb/" target="_blank"></a> 
-				 <a class="fa fa-skype" href="https://join.skype.com/invite/AnNLfG15O9Yk" target="_blank"></a> 
-				 <a class="fa fa-google" href="mailto:victoriaceban9@gmail"></a> 
-			</div>
-			<div class="contacts-info">
-				 <ul>
-				   <li>Email: victoriaceban9@gmail.com</li>
-				   <li>Phone: <a href="callto:+37369382759">+37369382759</a></li>
-				   <li>Address: bd. Dacia 34</li>
-			   </ul>
+				<div class="col-5">
+					<h1>CEBAN VICTORIA</h1>
+					<h3>FRONT END DEVELOPER</h3>
+				</div>
+				<div class="col">
+					<div class="social-links">
+						 <a class="fa fa-facebook" href="https://www.facebook.com/vica1995/" target="_blank"></a> 
+						 <a class="fa fa-linkedin" href="https://www.linkedin.com/in/victoria-c-377a181bb/" target="_blank"></a> 
+						 <a class="fa fa-skype" href="https://join.skype.com/invite/AnNLfG15O9Yk" target="_blank"></a> 
+						 <a class="fa fa-google" href="mailto:victoriaceban9@gmail"></a> 
+					</div>
+					<div class="contacts-info">
+						 <ul>
+						   <li>Email: victoriaceban9@gmail.com</li>
+						   <li>Phone: <a href="callto:+37369382759">+37369382759</a></li>
+						   <li>Address: bd. Dacia 34</li>
+					   </ul>
+					</div>
+				</div>
 			</div>
 		</div>
 			
-		</section>
-			<nav>
-				<ul>
-					<li><a href="#about">About</a></li>
-					<li><a href="#work-experience">Work Experience</a></li>
-					<li><a href="#skills-and-abilities">Skills and Abilities</a></li>
-					<li><a href="#contact">Contact</a></li>
-					
-				</ul>
-			</nav>
 	<main>
-		<section id="section-name"> 
-		<div class="section-row">
-			<div class="data-header">
-				<p>About</p>
-			</div>
-			<div class="data">
-				<p>I am able to handle multiple tasks on a daily basis. I am hardworking and I have experience working as part of a team and individually. Desire to work for the company's purposes and fulfill obligations on time.</p>
+		<div class="section my-2 border-top border-light p-3">  
+			<div class="row">
+				<div class="col-4">
+					<p class="h3 text-sm-end">About</p>
+				</div>
+				<div class="col">
+					<p class="h6 text-justify">I am able to handle multiple tasks on a daily basis. I am hardworking and I have experience working as part of a team and individually. Desire to work for the company's purposes and fulfill obligations on time.</p>
+				</div>
 			</div>
 		</div>
-		</section>
 		
-		<section id="work-experience">
-			<div class="section-row">
-				<div class="data-header">
-					<p>Work Experience</p>
+		<div class="section my-2 border-top border-light p-3"> 
+			<div class="row">
+				<div class="col-4">
+					<p class="h3 text-sm-end">Work Experience</p>
 				</div>
-				<div class="data">
-					<table cellspacing=0 border=1>
+				<div class="col">
+					<table class="table table-bordered">
 					<thead>
 						<tr>
 							<th>Period</th>
@@ -96,33 +90,33 @@
 							<td>Central Electoral Commissione</td>
 							<td>
 									<h3>Operator</h3>
-									<p>Checking the subscription lists of the candidates in the elections, entering the data in the computer. Voters list</p>
+									<p>Checking the subscription lists of the candidates in the elections, entering the col in the computer. Voters list</p>
 							</td>
 						</tr>
 					</tbody>
 				</table>
 				</div>
 			</div>
-		</section>
-		<section id="contact">
-			<div class="section-row">
-				<div class="data-header">
-					<p>Education and Training</p>
+		</div>
+		<div class="section my-2 border-top border-light p-3"> 
+			<div class="row">
+				<div class="col-4">
+					<p class="h3 text-sm-end">Education and Training</p>
 				</div>
-				<div class="data">
+				<div class="col">
 					<ul>
 						<li>2002-2014 Theoretical High School with Arts profile "Nicolae Sulac"</li>
 						<li>2014-2018 Academy of Economic Studies "Information Technology"</li>
 					</ul>
 				</div>
 			</div>
-		</section>
-		<section id="language-skills">
-			<div class="section-row">
-				<div class="data-header">
-					<p>Language Skills</p>
+		</div>
+		<div class="section my-2 border-top border-light p-3"> 
+			<div class="row">
+				<div class="col-4">
+					<p class="h3 text-sm-end">Language Skills</p>
 				</div>
-				<div class="data">
+				<div class="col">
 					<ul>
 						<li>Romanian- Native</li>
 						<li>Russian- Fluent</li>
@@ -132,13 +126,13 @@
 
 				</div>
 			</div>
-		</section>
-		<section id="skills-and-abilities">
-			<div class="section-row">
-				<div class="data-header">
-					<p>Skills and Abilities</p>
+		</div>
+		<div class="section my-2 border-top border-light p-3"> 
+			<div class="row">
+				<div class="col-4">
+					<p class="h3 text-sm-end">Skills and Abilities</p>
 				</div>
-				<div class="data">
+				<div class="col">
 					<ul>
 						<li>Adobe Photoshop</li>
 						<li>HTML</li>
@@ -146,20 +140,20 @@
 					</ul>
 				</div>
 			</div>
-		</section>
-		<section id="activities-and-interests">
-			<div class="section-row">
-				<div class="data-header">
-					<p>Activities and Interests</p>
+		</div>
+		<div class="section my-2 border-top border-light p-3"> 
+			<div class="row">
+				<div class="col-4">
+					<p class="h3 text-sm-end">Activities and Interests</p>
 				</div>
-				<div class="data">
-					<p>Travel,Sport,Animals,Music</p>
+				<div class="col">
+					<p class="h6 text-justify">Travel,Sport,Animals,Music</p>
 				</div>
 			</div>
-		</section>
+		</div>
 	</main>
 	<footer>
-		<div>
+		<div class="text-sm-center">
 		Copyright &copy; 2021, Developmentaid
 		</div>
 	</footer>
